--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "next-sanity": "^0.5.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.30.0"
   }
 }
